Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Z15.out
Z15.java:11:36: compiler.err.expression.not.allowable.as.annotation.value
1 error
